# rhino

./: LICENSE  README.md  rhino.cabal
examples/: salary.rh  test.rh
examples/imports/: a.rh  b.rh  fail2.rh  fail3.rh  imp1.rh  imp2.rh
examples/salary/: alice.rh  bob.rh  tax.rh
exe/: Main.hs
src/Data/: DAG.hs
src/Rhino/: AST.hs  Error.hs  Evaluate.hs  InputProperties.hs  Load.hs  Parser.hs  Prelude.hs  Reachability.hs  StaticCheck.hs  Type.hs  Utils.hs
test/: Rhino.hs
